--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
     opacity: .5;
 }
 
-.font-75{
-    font-size: .75rem;
+.font-65{
+    font-size: .65rem;
 }
 
 /* MAIN: SIDE BAR */
@@ -24,14 +24,13 @@
 .side-bar{
     background-color: black;
     color: white;
-    width: 18%;
-    height: 100%;
-    margin-bottom: 100px;
+    width: 250px;
+    height: calc(100vh - 80px)
 }
 
 .logo{
     margin: 15px 10px;
-    width: 70%;
+    width: 50%;
 }
 
 .icon-list{
@@ -57,7 +56,7 @@ li span{
 }
 
 .playlist h3{
-    margin: 30px 0 5px 0;
+    margin: 20px 0 5px 0;
 }
 
 .playlist-ul{
@@ -71,19 +70,99 @@ li span{
     margin: 10px;
 }
 
-hr{
-    width: 100%;
+.install:hover{
+    opacity: 1;
 }
+
+hr{
+    margin: 0 10px;
+}
+
 .user img{
     opacity: 1;
     border-radius: 50%;
     background-color: lightgray;
 }
+
+
+
+/* CALL TO ACTION */
+
 .call-to-action{
     background-color: black;
-    height: 100px;
-    width: 100%;
-    margin-left: 18%;
-    margin-top: 0;
+    height: 60px;
+    width: calc(100% - 250px);
+    z-index: 10;
+    justify-content: right;
+    align-items: flex-end;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
-    
+.call-to-action div{
+    border: 2px solid white;
+    border-radius: 20px;
+    padding: 10px;
+    color: white;
+    margin: 10px;
+    font-size: .5rem;
+    padding: 2px 15px;
+}  
+
+
+/* MAIN: RIGHT SIDE */
+
+#main-nav ul{
+    list-style: none;
+}
+
+
+
+.main{
+    background-color: rgb(20, 25, 34);
+    width: calc(100% - 250px);
+}
+
+.main-nav ul{
+    justify-content: space-around;
+    margin-top: 80px;
+}
+.main-nav li{
+    list-style: none;
+    color: white;
+    font-size: .5rem;
+    padding: 0 20px;
+}
+
+.main-nav li:hover{
+    border-bottom: 2px solid rgb(173, 249, 48);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* FOOTER: PLAYER */
+
+footer{
+    height: 80px;
+    background-color: rgb(40, 40, 40);
+}
