--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
 .main-container{
     width: 100%;
     height: calc(100vh - 80px);
-    overflow: auto;
 }
 
 .column{
@@ -148,6 +147,7 @@ hr{
     background-color: rgb(20, 25, 34);
     width: calc(100vw - 250px);
     color: white;
+    overflow: auto;
 }
 
 nav{
@@ -189,6 +189,7 @@ nav{
     background-color: black;
     z-index: 3;
     width: 100%;
+    height: 100%;
 }
 /* FOOTER: PLAYER */
 
@@ -210,10 +211,20 @@ footer i{
 .left-footer img{
     padding: 10px;
 }
+.left-footer{
+    width: 25%;
+}
+.center-footer{
+    width: 50%;
+}
 
+
+ .right-footer{
+    width: 25%;
+}
 .bottom-footer{
     height: 4px;
-    width: 100%;
+    width: 500px;
     background-color: gray;
 }
 
@@ -222,6 +233,20 @@ footer i{
     width: 30%;
     background-color: lightgrey;
     z-index: 3;
+}
+
+.volume{
+    height: 4px;
+    width: 100px;
+    background-color: gray;
+    align-self: center;
+}
+.bar2{
+    height: 4px;
+    width: 80%;
+    background-color: lightgray;
+    z-index: 3;
+    align-self: center;
 }
 /* MEDIA QUERIES */
 
