--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@
 .column{
     flex-direction: column;
 }
+.radius{
+    border-radius: 50%;
+}
 /* MAIN: SIDE BAR */
 
 .side-bar{
@@ -180,9 +183,11 @@ nav{
 .card{
     width: calc(100% /6 - 10px);
     margin: 10px;
+    position: relative;
 }
 .card img{
     width: 100%;
+    display: block;
 }
 
 .overlay{
@@ -190,6 +195,7 @@ nav{
     z-index: 3;
     width: 100%;
     height: 100%;
+    position: absolute;
 }
 /* FOOTER: PLAYER */
 
@@ -211,15 +217,24 @@ footer i{
 .left-footer img{
     padding: 10px;
 }
+
+#font-45{
+    font-size: .45rem;
+    color: lightgray;
+    align-self: center;
+}
+
 .left-footer{
     width: 25%;
 }
+
 .center-footer{
     width: 50%;
+    align-items: center;
 }
 
 
- .right-footer{
+.right-footer{
     width: 25%;
 }
 .bottom-footer{
@@ -237,7 +252,7 @@ footer i{
 
 .volume{
     height: 4px;
-    width: 100px;
+    width: 150px;
     background-color: gray;
     align-self: center;
 }
