--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 .column{
     flex-direction: column;
 }
+
 .radius{
     border-radius: 50%;
 }
@@ -192,12 +193,22 @@ nav{
 }
 
 .overlay{
+    display: none;
     background-color: black;
     z-index: 3;
     width: 100%;
     height: 100%;
     position: absolute;
+    top: 0;
+    left: 0;
 }
+.overlay i{
+    font-size: 3rem;
+}
+.card:hover .overlay{
+    display: block;
+}
+
 /* FOOTER: PLAYER */
 
 footer{
